--- a/WEB/appsettings.Development.json
+++ b/WEB/appsettings.Development.json
@@ -4,5 +4,25 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Empleados_Agregar": "https://localhost:7181/api/Empleado/Agregar",
+    "Empleados_Modificar": "https://localhost:7181/api/Empleado/Modificar",
+    "Empleados_Eliminar": "https://localhost:7181/api/Empleado/Eliminar?Id=[ParametroI]",
+    "Empleados_Listar": "https://localhost:7181/api/Empleado/Listar",
+    "Permisos_Agregar": "https://localhost:7181/api/Permiso/Agregar",
+    "Permisos_Modificar": "https://localhost:7181/api/Permiso/Modificar",
+    "Permisos_Eliminar": "https://localhost:7181/api/Permiso/Eliminar?Id=[ParametroI]",
+    "Permisos_Listar": "https://localhost:7181/api/Permiso/Listar",
+    "Tiendas_Agregar": "https://localhost:7181/api/Tienda/Agregar",
+    "Tiendas_Modificar": "https://localhost:7181/api/Tienda/Modificar",
+    "Tiendas_Eliminar": "https://localhost:7181/api/Tienda/Eliminar?Id=[ParametroI]",
+    "Tiendas_Listar": "https://localhost:7181/api/Tienda/Listar",
+    "Usuarios_Agregar": "https://localhost:7181/api/Usuario/Agregar",
+    "Usuarios_Modificar": "https://localhost:7181/api/Usuario/Modificar",
+    "Usuarios_Eliminar": "https://localhost:7181/api/Usuario/Eliminar?Id=[ParametroI]",
+    "Usuarios_Listar": "https://localhost:7181/api/Usuario/Listar",
+    "Perfiles_Listar": "https://localhost:7181/api/Perfil/Listar"
   }
 }
