registro usuarios funcional

--- a/WEB/appsettings.Development.json
+++ b/WEB/appsettings.Development.json
@@ -24,6 +24,7 @@
     "Usuarios_Modificar": "https://localhost:7181/api/Usuario/Actualizar",
     "Usuarios_Eliminar": "https://localhost:7181/api/Usuario/Eliminar?Id=[Parametro1]",
     "Usuarios_Listar": "https://localhost:7181/api/Usuario/Listar",
+    "Usuarios_Validar": "https://localhost:7181/api/Usuario/Validar",
     "Perfiles_Listar": "https://localhost:7181/api/Perfil/Listar"
   }
 }
