ajuste cadena conexion

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlConnection": "Server=tcp:test-server1495.database.windows.net,1433;Initial Catalog=P1700;Persist Security Info=False;User ID=Admin1495;Password=Tlttc.1820;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "SqlConnection": "Server=tcp:test-server1495.database.windows.net,1433;Initial Catalog=P1700;Persist Security Info=False;User ID=ptprides;Password=Tlttc.1820;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Key": "ukd8ANE4Q2Kzh_G-yzjM4lQJsbrqFn2D3UKFc7z3hBs=",
